# School-21

./: .gitignore
fdf/: CMakeLists.txt  Makefile
fdf/includes/: fdf.h
fdf/libft/: Makefile
fdf/libft/src/: ft_tolower.c
fdf/src/: ft_delfdf.c  ft_draw.c  ft_koord.c  ft_validation.c  main.c
fdf/test_maps/: 100-6.fdf
fillit/: 1  Makefile
fillit/libft/: Makefile
fillit/src/: fillit.c
ft_printf/: .gitignore  CMakeLists.txt  Makefile  author  main.c
ft_printf/includes/: ft_printf.h  func_printf.h
ft_printf/libft/: Makefile
ft_printf/libft/includes/: libft.h
ft_printf/libft/src/: ft_itoa_base.c  ft_max_int.c
ft_printf/src/: a_ft_printf.c  b_parser.c  c_doit.c  d_buff_write.c  doit_c.c  doit_di.c  doit_f.c  doit_lf.c  doit_ouxx_1.c  doit_ouxx_2.c  doit_p.c  doit_persent.c  doit_s.c
gnl/: CMakeLists.txt  Makefile  author  get_next_line.c  get_next_line.h  main.c  main_practica.c  one_big_fat_line.txt  subtext.txt  test_gnl  text.txt  text1.txt  text2.txt
gnl/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_countarrtochar.c  ft_isalnum.c  ft_isprint.c  ft_lsdelcontent.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelcont.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_newarrchar.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strdup.c  ft_strequ.c  ft_striter.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strnequ.c  ft_strnew.c  ft_strsplit.c  (+2 more)
init/network/: 01  02  03  04  05  06  07  08  09  10  11  12  13  14  15
init/scripts/: 01  02  03  04
init/system/: 01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24
lem-in/: CMakeLists.txt  Makefile  author  lem-in
lem-in/includes/: lem-in.h  lem_in.h
lem-in/my_maps/: flow-one
lem-in/src/: add_level.c  ant_and_comment.c  check_in.c  check_out.c  count_in_out.c  free.c  init.c  lemin.c  links.c  move.c  output.c  parser.c  path.c
libft/: CMakeLists.txt  Makefile
libft/includes/: ft_printf.h  get_next_line.h  libft.h
libft/src/array/: ft_countarrtochar.c  ft_lenarrtochar.c
libft/src/char/: ft_isalpha.c  ft_isascii.c  ft_isdigit.c
libft/src/gnl/: get_next_line.c  get_next_line_bd.c
libft/src/int/: ft_int_abs.c  ft_int_abs_min.c  ft_int_arr_check.c  ft_int_arr_max.c  ft_int_arr_min.c  ft_int_max.c  ft_int_min.c
libft/src/list/: ft_lst1add.c  ft_lst1del.c  ft_lst1delone.c  ft_lst1iter.c  ft_lst1len.c  ft_lst1map.c  ft_lst1new.c
libft/src/memory/: ft_malloc.c  ft_memccpy.c  ft_memdel.c  ft_memset.c
libft/src/output/: ft_error.c  ft_putchar.c  ft_putendl.c
libft/src/output/ft_printf/: a_ft_printf.c  b_parser.c  c_doit.c  d_buff_write.c  doit_c.c  doit_di.c  doit_f.c  doit_lf.c  doit_ouxx_1.c  doit_ouxx_2.c  doit_p.c  doit_persent.c  doit_s.c
libft/src/string/: ft_checkline_int_space.c  ft_strcpy.c  ft_strdel.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c
libft/src/xtoy/: ft_atoi.c  ft_atoi_longlong.c  ft_itoa.c  ft_itoa_base.c
piscine_reloaded/ex00/: .test3.swp  exo.tar
piscine_reloaded/ex06/: ft_print_alphabet.c  main_ft_print_alphabet.c
piscine_reloaded/ex07/: ft_print_numbers.c  main_ft_print_numbers.c
piscine_reloaded/ex08/: ft_is_negative.c  ft_putchar.c  main_ft_is_negative.c
piscine_reloaded/ex09/: ft_ft.c  main_ft_ft.c
piscine_reloaded/ex10/: main_ft_swap.c
piscine_reloaded/ex11/: ft_div_mod.c  main_ft_div_mod.c
piscine_reloaded/ex12/: ft_iterative_factorial.c  main_ft_iterative_factorial.c
piscine_reloaded/ex13/: ft_recursive_factorial.c  main_ft_recursive_factorial.c
piscine_reloaded/ex14/: ft_sqrt.c  main_ft_sqrt.c
piscine_reloaded/ex15/: ft_putstr.c  main_ft_putstr.c
piscine_reloaded/ex16/: main_ft_strlen.c
piscine_reloaded/ex17/: ft_strcmp.c  main_ft_strcmp.c
piscine_reloaded/ex18/: ft_print_params.c  ft_putchar.c
piscine_reloaded/ex19/: ft_sort_params.c
piscine_reloaded/ex20/: ft_strdup.c  main_ft_strdup.c
piscine_reloaded/ex21/: ft_range.c  main_ft_range.c
piscine_reloaded/ex22/: ft_abs.h
piscine_reloaded/ex23/: ft_point.h  main_ft_point.c
piscine_reloaded/ex24/: Makefile
piscine_reloaded/ex24/srcs/: ft_swap.c
piscine_reloaded/ex25/: ft_foreach.c
piscine_reloaded/ex26/: CMakeLists.txt  ft_count_if.c  ft_strlen.c  main_ft_count_if.c
piscine_reloaded/ex27/: CMakeLists.txt  Makefile  ft_display_file.c  ft_head.h
practika/: main.c
practika/C/: CMakeLists.txt  head.h  main.c  vozvedenie_v_stepen.c
practika/Hello_sber/: CMakeLists.txt  Makefile  main_sber.c
practika/exam/5_ options/: CMakeLists.txt  main.c  options
practika/exam/5_biggest_pal/: CMakeLists.txt  biggest_pal  main.c
practika/exam/5_brackets/: CMakeLists.txt  brackets  main.c
practika/exam/5_cycle_detector/: CMakeLists.txt  cycle_detector.c  list.h  main.c
practika/exam/5_print_memory/: CMakeLists.txt  main.c  print_memory.c
practika/exam/5_rpn_calc/: CMakeLists.txt  main.c  rpn_calc
practika/exam/add_prime_sum/: asd.c  main.c
practika/exam/epur_str/: CMakeLists.txt  epur_str  epur_str.c
practika/exam/expand_str/: expand_str  main.c
practika/exam/ft_list_size/: CMakeLists.txt  ft_list.h  ft_list_size.c  main.c
practika/exam/ft_rrange/: CMakeLists.txt  ft_rrange.c  main.c
practika/exam/lcm/: CMakeLists.txt  lcm.c  main.c
practika/struct/: CMakeLists.txt  main.c
practika/sudoku/: CMakeLists.txt  ft.c  ft.h  main.c  sdk.h  sdk_accessory.c  sdk_solver.c  text.txt
practika/xx/: CMakeLists.txt  main.c
push_swap/: 100  30  500  60  CMakeLists.txt  Makefile  checker  push_swap
push_swap/includes/: push_swap.h
push_swap/src/checker/: checker.c
push_swap/src/other/: do_stacks.c  other.c  parser.c  rules_pa_pb.c  rules_ra_rb_rr.c  rules_rra_rrb_rrr.c  rules_sa_sb_ss.c
push_swap/src/push_swap/: after_chanks.c  algoritm_100_500.c  algoritm_12.c  algoritm_3_5.c  best_way.c  chank_in_b.c  push_swap.c
(+5 files in other folders)
